# credit-risk-fico-heloc

./: .dockerigore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb
reports/: global_shap.csv
src/credit_risk/: _quick_test.py  api.py  baseline.py  explain.py  features.py  global_shap_report.py  make_sample.py  predict.py  train.py  train_xgb.py
tests/: test_api.py  test_predict.py
